test(spec): specify cases.
Selectively run tests from the
spec suite, by building a suite
object from test ids specified
in 'deepdust.test.spec.implemented',
so that unimplemented features
do not fail the build.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 #ignore generated test code
-deepdust/test/spec/*__generated__.py
+deepdust/test/spec/test_*.py
 deepdust/test/spec/cases
 
 # ignore Emacs autosaves
